fix alignment of main content on pets page

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ padding: 0% 0% 30px 0%;
   box-sizing: border-box;
   border: 2px solid #000;
   padding: 10px;
-  margin:50px 12%;
+  margin:50px auto;
   display:inline-block;
 }
 
